Modifies form input style - fylo-dark-theme-landing-page

--- a/pages/fylo-dark-theme-landing-page/index.html
+++ b/pages/fylo-dark-theme-landing-page/index.html
@@ -210,9 +210,11 @@
       </p>
       <form action="index.html" method="POST">
         <div class="form-group">
-          <input type="email" name="email" id="email" placeholder="name@example.com">
-          <p class="error-alert">Please enter a valid email address</p>
-          <a id="submitBtn" class="btn" href="#">Get Started For Free</a>
+          <div class="input-group">
+            <input type="email" name="email" id="email" placeholder="name@example.com">
+            <p class="error-alert">Please enter a valid email address</p>
+          </div>
+          <button id="submitBtn" class="btn" href="#">Get Started For Free</button>
         </div>
       </form>
     </div>
