Modifies some style errors

--- a/pages/fylo-dark-theme-landing-page/index.html
+++ b/pages/fylo-dark-theme-landing-page/index.html
@@ -214,7 +214,7 @@
             <input type="email" name="email" id="email" placeholder="name@example.com">
             <p class="error-alert">Please enter a valid email address</p>
           </div>
-          <button id="submitBtn" class="btn" href="#">Get Started For Free</button>
+          <button id="submitBtn" class="btn">Get Started For Free</button>
         </div>
       </form>
     </div>
